cluster/blockchain/sia/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sia-policy
  namespace: blockchain
spec:
  podSelector:
    matchLabels:
      app: sia
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 9980
    from:
    - ipBlock:
        cidr: 10.0.0.0/8
        except:
        - 10.100.20.0/24
  - ports:
    - port: 8884
    from:
    - namespaceSelector:
        matchLabels:
          namespace: networking
      podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik
  - ports:
    - port: 9981
    - port: 9982
    - port: 9983
    - port: 9984
    from:
      - ipBlock:
          cidr: 0.0.0.0/0
